fixed page2 background on mobile

--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 
-body {
+body, html {
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
+    box-sizing: border-box;
 }
 .container {
+    box-sizing: border-box;
     padding: 20px;
     width: 1000px;
     margin: auto;
@@ -102,8 +104,10 @@ ul.list {
     background-image: url(./joel-muniz-lUK16p_JtCM-unsplash.jpg);
     background-position: center;
     background-repeat: no-repeat;
+
     color: white;
-    font-size: 2rem;
+    font-size: 2rem; 
+    width: 100vw;
 }
 
 .goat {
